# lab06-generics-alpha

./: CMakeLists.txt
.run/: lab06.run.xml
lib/: CMakeLists.txt
src/: BankTransferSender.cpp  BankTransferSender.h  CMakeLists.txt  CashSender.cpp  CashSender.h  CheckSender.cpp  CheckSender.h  ISend.cpp  ISend.h  Person.cpp  Person.h  main.cpp
tst/: CMakeLists.txt  PersonTest.cpp
